Terraform-project-1/main.tf
#configuring the aws provider and authentication
#provider "aws" {
#  region = "us-east-1"
#  access_key = ""
#  secret_key = ""
#}

#resource "aws_instance" "my-first-server" {
#  ami           = "ami-00874d747dde814fa"
#  instance_type = "t2.micro"
#   tags = {
#    #Name = "ubuntu"
#  }
#}

#resource "aws_subnet" "subnet-1" {
#  vpc_id     = aws_vpc.first-vpc.id
#  cidr_block = "10.0.1.0/24"
#
#  tags = {
#    Name = "prod-subnet"
#  }
#}

#resource "aws_vpc" "first-vpc" {
#  cidr_block = "10.0.0.0/16"
#  tags = {
#    Name = "production"
#  }
#}

#resource "aws_subnet" "subnet-2" {
#  vpc_id     = aws_vpc.second-vpc.id
#  cidr_block = "10.1.1.0/24"

#  tags = {
#    Name = "dev-subnet"
#  }
#}

#resource "aws_vpc" "second-vpc" {
#  cidr_block = "10.1.0.0/16"
#  tags = {
#    Name = "dev"
#  }
#}

# PERSONAL TASK
# 1. Create a vpc
# 2. Create a internet Gateway
# 3. Create a Custom Route Table
# 4. Create a Subnet
# 5. Associate the Subnet with Route Table
# 6. Create Security Group to allow port 22, 80, 443
# 7. Create a network interface with an ip in the subnet that was created in step 4
# 8. Assign an Elastic IP to the network interface created in step 7
# 9. Create an Ubuntu server and install/enable apache2

provider "aws" {
  region     = "us-east-1"
  access_key = ""
  secret_key = ""
}

#variable "subnet_prefix" {
#description = "cidr block for the subnet"
#default
#type        = string
#}

# 1. vpc

resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    name = "production"
  }
}

# 2. Gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id
}

# 3. custom Route Table

resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "prod"
  }
}

# 4. Create a Subnet

resource "aws_subnet" "prod-subnet-1" {
  vpc_id            = aws_vpc.prod-vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "prod_subnet"
  }
}

# 5. Associate the Subnet with Route Table

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.prod-subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}

# 6. Create Security Group to allow port 22, 80, 443

resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web inbound traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web-traffics"
  }
}

# 7. Create a network interface with an ip in the subnet that was created in step 4

resource "aws_network_interface" "web-server-tad" {
  subnet_id       = aws_subnet.prod-subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]
}

# 8. Assign an Elastic IP to the network interface created in step 7

resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-tad.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.gw]
}

resource "aws_instance" "web-server-instance" {
  ami               = "ami-00874d747dde814fa"
  instance_type     = "t2.micro"
  availability_zone = "us-east-1a"
  key_name          = "terraform-project1-main-key"

  network_interface {
    network_interface_id = aws_network_interface.web-server-tad.id
    device_index         = 0
  }

  user_data = <<-EOF
              #!/bin/bash
              sudo apt update -y
              sudo apt install apache2 -y 
              sudo systemctl start apache2
              sudo bash -c 'echo Welcome to Tade web server, this is a personal Terraform refresher project > /var/www/html/index.html'
              EOF
  tags = {
    Name = "web-server"
  }
}


output "server_public_ip" {
  value = aws_eip.one.public_ip
}

output "server_private_ip" {
  value = aws_instance.web-server-instance.private_ip
}

output "server_id" {
  value = aws_instance.web-server-instance.id
}
